--- a/morgan_freeman/style.css
+++ b/morgan_freeman/style.css
@@ -1,4 +1,164 @@
-h1{
-    color: brown;
-    background-color: bisque;
+:root{
+    --color1 : rgb(0, 0, 0);
+    --color2: rgb(255, 255, 255);
+    --color3: rgb(134, 134, 134);
+    --color4:rgb(141, 141, 141);
+    --hauteur-menu: 50px;
 }
+
+*{
+    border-width : 0.1px;
+    border-style : solid;
+    border-color : #ff9696;
+    padding : 0px;
+    margin : 0px;
+    
+    }
+
+
+
+
+body{
+    font-family: "ProximaNova-Regular", "Helvetica", Arial, sans-serif;
+    color: var(--color4);
+    background: var(--color1);
+
+}
+
+.bandeau{
+    color: brown;
+    background: blue;
+}
+
+a{
+    color: var(--color3);
+    text-decoration:none; 
+
+}
+
+
+
+a:hover{
+    color: var(--color2);
+    /* font-style: oblique; */
+}
+
+/*--------------------- Menu déroulant --------------------- */
+/* ce code pour le menu déroulant est adapté du site codeur : 
+https://www.codeur.com/tuto/css/creer-menu-deroulant-css/ */
+
+  nav {
+    width: 100%;
+    font-size: 18px;
+    position: sticky;
+    top: 0;
+    color: var(--color1);
+  }
+  
+  nav > ul {
+    display: flex;
+    text-align: center;
+    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.3);
+    color: var(--color1);
+    height: var(--hauteur-menu);
+  }
+  
+  nav ul {
+    list-style-type: none;
+  }
+  
+  nav > ul > li {
+    background-color: var(--color1);
+    position: relative;
+    height: 100%;
+    flex: 1;
+  }
+  
+  nav > ul > li:hover > a{
+    color: var(--color2);
+  }
+  
+  nav > ul > li > a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  li a {
+    text-decoration: none;
+    color: var(--color4);
+  }
+  
+  .menu-deroulant > a:after{
+    content: '❯';
+    font-size: 15px;
+    margin-left: 7px;
+    display: inline-block;
+  }
+  
+  .menu-deroulant:hover > a:after{
+    animation: rotationFleche 0.2s linear forwards;
+  }
+  
+  @keyframes rotationFleche {
+    0% {
+      transform: rotate(0deg);
+    }
+    50% {
+      transform: rotate(45deg);
+    }
+    100%{
+      transform: rotate(90deg);
+    }
+  }
+  
+  .sous-menu {
+    margin-top: var(--hauteur-menu);
+    width: 100%;
+    text-align: left;
+    overflow: hidden;
+    max-height: 0;
+    border-radius: 2px;
+    background-color: var(--color1);
+  }
+  
+  .menu-deroulant:hover > .sous-menu {
+    animation: apparitionSousMenu 1s forwards;
+  }
+  
+  @keyframes apparitionSousMenu {
+    0% {
+      box-shadow: 0px 3px 3px 1px rgba(255, 255, 255, 0);
+      border-top: 3px solid #ffffff;
+    }
+    30% {
+      box-shadow: 0px 3px 3px 1px rgba(255, 255, 255, 0.3);
+    }
+    100% {
+      max-height: 50em;
+      border-top: 3px solid #ffffff;
+      box-shadow: 0px 3px 3px 1px rgba(255, 255, 255, 0.3);
+    }
+  }
+  
+  .sous-menu > li:hover {
+    background-color: var(--color3);
+    border-radius: 15px;
+  }
+  
+  .sous-menu > li > a {
+    align-items: center;
+    display: flex;
+    height: 50px;
+    padding-left: 20px;
+    width: 100%;
+    border-radius: 15px;
+  }
+  
+  .sous-menu > li:hover > a {
+    color: rgb(255, 255, 255);
+    border-radius: 15px;
+  }
+
+/* ---------------------fin du menu déroulant ---------------------*/
