--- a/style.css
+++ b/style.css
@@ -1,58 +1,120 @@
+@import url('https://fonts.googleapis.com/css2?family=Train+One&display=swap');
+
 :root{
-    --backgroung : #fffce9;
+    --background : #fffce9;
     --bandeau: #02361f;
+    --middle-color-transition:#012414;
     --color2: #02361f;
     --color3: #1c1b1b;
     --color4: #ffffff;
-    --background: #fffce9;
     --hauteur-menu: 50px;
     --heading-font-style: normal;
+    --text-header: #fffce9;
     --text-color: #02361f;
     --text-color-light: #ef1818;
     --border-color: #d9decb;
     --button-background: #03361e;
     --header-background: #1c1b1b;
+    --font-header: 'Train One', cursive;
 
 
 }
 
 *{
-    border-width : 0.1px;
+    /* border-width : 0.1px;
     border-style : solid;
-    border-color : #ff9696;
+    border-color : #ff9696; */
     padding : 0px;
     margin : 0px;
-    
-    
     }
 
 .bandeau{
-  color: var(--color3);
-  text-decoration:none; 
+  color: var(--color4);
+  text-decoration:none;
+  background: var(--bandeau);
+  display: block;
+  position: 0;
+  width: 100%;
+  box-shadow:0px 0px 12px rgba(0, 0, 0, 0.9);
+}
+
+.bandeau:hover{
+  color: var(--color4);
+  background: var(--header-background);
+  animation: bandeau-color 0.2s;
+}
+
+@keyframes bandeau-color {
+  0%{
+    background: var(--bandeau);
+  }
+
+  50%{
+    background: var(--middle-color-transition);
+  }
+
+  100%{
+    background: var(--header-background);
+  }  
 }
 
 
 
 body{
     font-family: "ProximaNova-Regular", "Helvetica", Arial, sans-serif;
-    color: var(--color4);
-    background: var(--color1);
+    color: var(--text-color);
+    background: var(--background);
     
 }
 
+h1{
+  font-family: var(--font-header);
+  font-size: 3rem;
+  text-align: center;
+  text-shadow: 0px 0px 12px rgba(61, 255, 164, 0.9);
+}
 
+
+h2{
+  padding-left: 5%;
+}
+
+.container{
+  margin-top: 0;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+p{
+  text-align: justify;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  line-height: 150%;
+  font-size: 1.1em;
+}
+
+.image_bio{
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.image_bio:hover{
+  content: 'Text affiche lors du hover';
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}
 
 a{
-    color: var(--color3);
-    text-decoration:none; 
-
+    text-decoration:none;
+    color: var(--color4);
+    background: var(--bandeau);
 }
 
 
-a:hover{
-    color: var(--color2);
-    /* font-style: oblique; */
-}
+
 
 /* ---------------------création de la galerie en grille 3X3 ---------------------*/
 .game-board {
@@ -63,7 +125,7 @@ a:hover{
   display: grid;
   grid-template-rows: 200px 200px 200px;
   grid-template-columns: 200px 200px 200px; 
-  z-index: 0;
+  /* z-index: 0; */
 }
 
 /* for some css stylings */
@@ -89,6 +151,7 @@ padding: 15px;
 }
 
 
+
 /* ---------------------fin de la grille --------------------- */
 
 
@@ -104,14 +167,14 @@ https://www.codeur.com/tuto/css/creer-menu-deroulant-css/ */
     font-size: 18px;
     position: sticky;
     top: 0;
-    color: var(--color1);
-    z-index: 1;
+    /* color: red; */
+    /* z-index: 1; */
   }
   
   nav > ul {
     display: flex;
     text-align: center;
-    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.3); */
     color: var(--color1);
     height: var(--hauteur-menu);
   }
@@ -119,17 +182,22 @@ https://www.codeur.com/tuto/css/creer-menu-deroulant-css/ */
   nav ul {
     list-style-type: none;
   }
+
+  nav:hover{
+    background-color: var(--header-background);
+  }
   
   nav > ul > li {
-    background-color: var(--color1);
+    background-color: var(--bandeau);
     position: relative;
     height: 100%;
     flex: 1;
   }
   
-  nav > ul > li:hover > a{
-    color: var(--color2);
-  }
+  /* nav > ul > li:hover > a{
+    color: var(--text-color-light);
+    background: var(--header-background);
+  } */
   
   nav > ul > li > a {
     position: absolute;
@@ -212,6 +280,7 @@ https://www.codeur.com/tuto/css/creer-menu-deroulant-css/ */
   .sous-menu > li:hover > a {
     color: rgb(255, 255, 255);
     border-radius: 15px;
+    opacity: 90%;
   }
 
 /* ---------------------fin du menu déroulant ---------------------*/
